add delete secret api, pass api test
