# docs/swagger.yaml
@@ -708,6 +708,39 @@ paths:
       tags:
       - pods
   /secrets:
+    delete:
+      consumes:
+      - application/json
+      description: delete a secret
+      parameters:
+      - description: the namespace of the secret to be deleted
+        in: query
+        name: namespace
+        required: true
+        type: string
+      - description: the name of the secret to be deleted
+        in: query
+        name: name
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: delete a secret
+      tags:
+      - secret
     get:
       consumes:
       - application/json
